k8s/apps/external-name/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: homeassistant.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant-svc
            port:
              number: 80
  tls:
  - secretName: homeassistant-rajsingh-info-tls
    hosts:
    - homeassistant.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: truenas.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas-svc
            port:
              number: 80
  tls:
  - secretName: truenas-rajsingh-info-tls
    hosts:
    - truenas.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: portainer.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer-svc
            port:
              number: 9000
  tls:
  - secretName: portainer-rajsingh-info-tls
    hosts:
    - portainer.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvm-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"  
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: kvm.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kvm-svc
            port:
              number: 443
  tls:
  - secretName: kvm-rajsingh-info-tls
    hosts:
    - kvm.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-redirect: "true"  
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: proxmox.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox-svc
            port:
              number: 8006
  tls:
  - secretName: proxmox-rajsingh-info-tls
    hosts:
    - proxmox.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: router.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-svc
            port:
              number: 80
  tls:
  - secretName: router-rajsingh-info-tls
    hosts:
    - router.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: jellyfin.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-svc
            port:
              number: 8096
  tls:
  - secretName: jellyfin-rajsingh-info-tls
    hosts:
    - jellyfin.rajsingh.info
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-rajsingh-info-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  rules:
  - host: code.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-svc
            port:
              number: 8680
  tls:
  - secretName: code-rajsingh-info-tls
    hosts:
    - code.rajsingh.info
